--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
-    <title>frontend</title>
+    <title>The Last Headache</title>
+    <link rel="shortcut icon" href="./public/1761393804595.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
