--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
     <title>The Last Headache</title>
-    <link rel="shortcut icon" href="./public/1761393804595.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/1761393804595.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
